# giggle

./: .gitignore  .gitlab-ci.yml  Makefile.am  NEWS  README  autogen.sh  configure.ac  giggle.doap  org.gnome.Giggle.json  org.gnome.giggle
data/: .gitignore  Makefile.am  giggle.appdata.xml  giggle.desktop  giggle.desktop.in.in  main-window.ui  org.gnome.Giggle.desktop.in.in
help/: Makefile.am
help/C/: browse-view.page  history-view.page
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/sl/: sl.po
help/sv/: sv.po
help/uk/: uk.po
lib/: .gitignore  Makefile.am
libgiggle/: .gitignore  Makefile.am  giggle-author.c  giggle-author.h  giggle-branch.c  giggle-branch.h  giggle-clipboard.c  giggle-clipboard.h  giggle-dispatcher.c  giggle-dispatcher.h  giggle-dummy.c  giggle-dummy.h  giggle-error.c  giggle-error.h  giggle-history.c  giggle-history.h  giggle-job.c  giggle-job.h  giggle-plugin-manager.c  giggle-plugin-manager.h  giggle-plugin.c  giggle-plugin.h  giggle-ref.c  giggle-ref.h  giggle-remote-branch.c  giggle-remote-branch.h  giggle-remote-ref.c  giggle-remote-ref.h  giggle-remote.c  giggle-remote.h  giggle-revision.c  giggle-revision.h  giggle-searchable.c  giggle-searchable.h  giggle-sysdeps.c  giggle-sysdeps.h  giggle-tag.c  giggle-tag.h  giggle-view-shell.c  giggle-view-shell.h  (+2 more)
libgiggle-git/: Makefile.am  giggle-git-add-ref.c  giggle-git-add-ref.h  giggle-git-add.c  giggle-git-add.h  giggle-git-authors.c  giggle-git-authors.h  giggle-git-blame.c  giggle-git-blame.h  giggle-git-cat-file.c  giggle-git-cat-file.h  giggle-git-clone.c  giggle-git-clone.h  giggle-git-commit.c  giggle-git-commit.h  giggle-git-config-read.c  giggle-git-config-read.h  giggle-git-config-write.c  giggle-git-config-write.h  giggle-git-config.c  giggle-git-config.h  giggle-git-delete-ref.c  giggle-git-delete-ref.h  giggle-git-diff-tree.c  giggle-git-diff-tree.h  giggle-git-diff.c  giggle-git-diff.h  giggle-git-ignore.c  giggle-git-ignore.h  giggle-git-list-files.c  giggle-git-list-files.h  giggle-git-list-tree.c  giggle-git-list-tree.h  giggle-git-log.c  giggle-git-log.h  giggle-git-refs.c  giggle-git-refs.h  giggle-git-remote-list.c  giggle-git-remote-list.h  giggle-git-revisions.c  (+3 more)
m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
plugins/: Makefile.am  giggle-hello-world-plugin.c  giggle-personal-details-plugin.c  giggle-personal-details-window.c  giggle-personal-details-window.h  giggle-view-terminal-plugin.c  giggle-view-terminal.c  giggle-view-terminal.h  hello-world.ui  personal-details.ui  terminal-view.ui
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fr.po  fur.po  gl.po  hu.po  id.po  ja.po  ko.po  nb.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po
src/: Makefile.am  eggfindbar.c  eggfindbar.h  giggle-authors-view.c  giggle-authors-view.h  giggle-avatar-cache.c  giggle-avatar-cache.h  giggle-avatar-image.c  giggle-avatar-image.h  giggle-branches-view.c  giggle-branches-view.h  giggle-clone-dialog.c  giggle-clone-dialog.h  giggle-description-editor.c  giggle-description-editor.h  giggle-diff-tree-view.c  giggle-diff-tree-view.h  giggle-diff-view.c  giggle-diff-view.h  giggle-diff-window.c  giggle-diff-window.h  giggle-file-list.c  giggle-file-list.h  giggle-graph-renderer.c  giggle-graph-renderer.h  giggle-helpers.c  giggle-helpers.h  giggle-input-dialog.c  giggle-input-dialog.h  giggle-label-action.c  giggle-label-action.h  giggle-main.c  giggle-remote-editor.c  giggle-remote-editor.h  giggle-remotes-view.c  giggle-remotes-view.h  giggle-rev-list-view.c  giggle-rev-list-view.h  giggle-revision-info-action.c  giggle-revision-info-action.h  (+20 more)
